[project]
name = "excel-to-md-streamlit-chat"
version = "0.1.0"
description = "Excel to Markdown converter with Streamlit chat interface"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit",
    "pandas==2.3.0",
    "openpyxl==3.1.5",
    "tabulate==0.9.0",
]

[tool.uv]
dev-dependencies = []